[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.11.0"
thiserror = "1.0"
sdl2 = { version = "0.35", default-features = false, features = ["image","ttf"] }
log = "0.4.20"
env_logger = "0.10.0"
rayon = "1.8.0"
rodio = "0.17.1"